--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     margin: 0;
     font-family: Arial;
     border:  border-box; 
+    padding: 0;
+}
+body{
+  /* background:#e3e6e6; */         
+  font-family: Arial, sans-serif;
+  background-color: rgb(223, 238, 216);
 }
 .navbar{
     height: 60px;
@@ -10,10 +16,11 @@
     color:white;
     display: flex;
   align-items: center;
+  justify-content: space-evenly;
 }
 .nav-logo{
     
-    height: 50px;
+    height: 20px;
     width:100px
 }
 
@@ -92,7 +99,7 @@ border :2px solid;
    }
   
    /* box 5 */
-.f{
+span{
     color: #FFFFFF;
     /* font: 12px; */
     font-size: .85rem;
@@ -100,9 +107,155 @@ border :2px solid;
 .s{
     display: flex;
     color: #FFFFFF;
-    /* font: 14px;  */
+ font: weight 700px; ;
 font-size: 1rem;
 
 }
+      /* BOX 6 */
 
+.nav-cart i{
+    
+    font: size 30px; ;
+
+}
+.nav-cart{
+    font-size: .85rem;
+    font-weight: 700;
+}
+
+.nav-link{
+    background-color: rgb(46, 37, 83);
+    color:#FFFFFF;
+}
+
+
+
+.option{
+    justify-content: space-evenly;
+    color: #232F3E;
+    display: flex;
+}
+.p {
+   justify-content: space-evenly;
+}
+
+.menu{
+    justify-content: space-evenly;
+}
+           
+/* background box 7 */
+.image{  
+    height:400px ;
+    background-size: cover;
+
+}
+/*
+.Deals{
+ height:600px ;
+    background-size: cover;
+} */
+.shop{
+    display: flex;
+     justify-content: space-evenly;
+    padding: 20px;
+    
+}
+ /* .box{
+    border:2px solid  black;
+    height: 500px;
+    width: 30%;
+     background-color: white;
+}
+
+
+ 
+ .box1{
+    display: flex;
+height: 300px;
+ 
+ 
+ }
+.box2{
+    display:flex ;
+    height: 300px;
+
+   }  */
+   
+
+ 
+ 
+
+.container{
+    display:flex;
+    justify-content: space-between;
+    gap:15px;
+}
+
+.box{
+    background:white;
+    width:31%;
+    padding:15px;
+    box-sizing:border-box;
+}
+
+.box h2{
+    margin:0 0 5px 0;
+}
+
+.box h3{
+    margin:0 0 15px 0;
+}
+
+.img-row{
+    display:flex;
+    gap:10px;
+}
+
+.img-row img{
+    width:50%;
+    object-fit:contain;
+} 
+
+
+.back{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    color: whitesmoke;
+    background-color: #232F3E;
+
+}
+
+.back p{
+    padding-top: 18px;
+}
+
+.back2{
+    width: 100%;
+    height: 450px;
+    background-color: #101a38;
+    color: whitesmoke;
+    display: flex;
+    flex-direction: row;
+}
+
+
+ul{
+    list-style: none;
+    padding: 40px;
+    padding-left:170px;
+}
+
+.back3{
+    height: 50px;
+    color: whitesmoke;
+    background-color: #040a1a;
+    align-items: center;
+    text-align: center;
+    
+}
+
+.back3 p{
+    padding-top: 18px;
+}
 
